--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -5,13 +5,10 @@
   height:100%;
 }
 .not-login-container {
-  position: absolute;
-  top: 30%;
-  left: 20%;
 }
 .not-login-content {
-  display: flex;
   text-align: center;
+  padding: 50% 0px;
 }
 
 .order-list {
