--- a/src/pages/orderdetail/orderdetail.scss
+++ b/src/pages/orderdetail/orderdetail.scss
@@ -21,8 +21,10 @@
   justify-content: center;
   width: 100%;
   z-index: 100;
-  bottom: 10px;
+  bottom: 0px;
   background-color: white;
+  align-items: center;
+  height: 80px;
 }
 .order-order-info {
   padding-bottom: 100px;
