--- a/src/pages/balance/balance.scss
+++ b/src/pages/balance/balance.scss
@@ -9,7 +9,7 @@
 .balance-summary__total {
   background-color: white;
   font-size: 30px;
-  color: green;
+  color: #09BB07;
   display: flex;
   justify-content: center;
   align-items: center;
