--- a/src/pages/my/my.scss
+++ b/src/pages/my/my.scss
@@ -33,6 +33,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: white;
+  padding: 20px;
 }
 
 .my-basic-info__Avatar {
@@ -56,6 +57,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px;
 }
 
 .my-operation {
