--- a/src/pages/ordersubmit/ordersubmit.scss
+++ b/src/pages/ordersubmit/ordersubmit.scss
@@ -64,6 +64,7 @@
   display: flex;
   padding: 10px;
   align-items: center;
+  justify-content: space-around;
 }
 .order-submit-time {
   display: flex;
